@@ -19,7 +19,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: streams.c,v 1.61.2.2 2004/09/08 18:45:05 pollita Exp $ */
+/* $Id: streams.c,v 1.61.2.3 2004/10/11 18:32:59 iliaa Exp $ */
 
 #define _GNU_SOURCE
 #include "php.h"
@@ -835,7 +835,7 @@ PHPAPI char *php_stream_get_record(php_stream *stream, size_t maxlen, size_t *re
 
 	php_stream_fill_read_buffer(stream, maxlen TSRMLS_CC);
 
-	if (delim_len == 0) {
+	if (delim_len == 0 || !delim) {
 		toread = maxlen;
 	} else {
 		if (delim_len == 1) {
@@ -859,6 +859,7 @@ PHPAPI char *php_stream_get_record(php_stream *stream, size_t maxlen, size_t *re
 	*returned_len = php_stream_read(stream, buf, toread);
 	                
 	if (*returned_len >= 0) {
+		buf[*returned_len] = '\0';
 		return buf;
 	} else {
 		efree(buf);
